@@ -1,4 +1,4 @@
-NDN-IND (2020-11-10)
+NDN-IND (2020-11-19)
 --------------------
 
 Changes
@@ -21,6 +21,7 @@ Changes
 * In KeyChain, remove obsolete security v1 API. https://github.com/operantnetworks/ndn-ind/issues/1
 * Remove obsolete Name-based Access Control v1. (Keep v2.)
 * PIB and TPM: Change system() to mkdir() or create_directories(). https://github.com/operantnetworks/ndn-ind/pull/15
+* In Transport, added readRawPackets to handle raw packets. https://github.com/operantnetworks/ndn-ind/pull/16
 * In examples and unit tests, use the default Face which doesn't require TCP.
 * Move the instructions for RHEL 7 to the wiki.
 
